# chinaski

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.txt
.github/: release-drafter.yml
.github/workflows/: codeql.yml
chinaski/: __main__.py  chinaski.py  cli.py  finder.py  henry.py  is_email.py  read_lines.py  test_two.txt
tests/: test_finder.py  test_henry.py  test_is_email.py  test_read_lines.py
tests/test_files/: one_line_file.txt  several_lines_file.txt  several_lines_file_two.txt
